# tardigrade

./: .gitignore  CMakeLists.txt  README.md  conanfile.py
.github/workflows/: ci.yml
cmake/: avr-toolchain.cmake
examples/: CMakeLists.txt  arduino_watchdog.cpp  avr_hal.hpp  ping_pong.cpp  ping_pong_bare.cpp
include/tartigrada/: actor.hpp  environment.hpp  handler.hpp  handler_traits.hpp  message.hpp  mutex.hpp  node.hpp  platform.hpp  queue.hpp  semaphore.hpp  state.hpp  supervisor.hpp  tartigrada.hpp  type_id.hpp
tests/: CMakeLists.txt  test_actor.cpp  test_mutex.cpp  test_queue.cpp  test_semaphore.cpp  test_timer.cpp  test_type_id.cpp
tools/: CMakeLists.txt  sim_runner.cpp
